fix awkward heading spacing

--- a/src/styles/type.scss
+++ b/src/styles/type.scss
@@ -16,7 +16,7 @@ body {
 
 h1, h2, h3, h4, h5 {
     line-height: 1.2;
-    margin: 1.5em 0 1em 0;
+    margin: 1em 0 .5em 0;
     @media (prefers-color-scheme: dark) { color: $white; }
     color: color( gray, 950);
     font-weight: 700;
